--- a/app/main/templates/main/layout.html
+++ b/app/main/templates/main/layout.html
@@ -22,7 +22,7 @@
         <h3>Навигация</h3>
         <ul>
             <a href="{% url 'home' %}"><li><i class="fas fa-home"></i> Главная</li></a>
-            <a href="{% url 'library_home' %}"><li><i class="fas fa-home"></i> Библиотеки</li></a>
+            <a href="{% url 'library_home' %}"><li><i class="fas fa-solid fa-book-open" style="color: #ffffff;"></i> Библиотеки</li></a>
         </ul>
     </aside>
     <main>
